--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.application.name=am-asset-details
 server.port=8200
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetchRegistry=true
